<resources>
    <string name="app_name">Dumi</string>
    <string name="NIK">NIK</string>
    <string name="NIK_no">NIK No.</string>
    <string name="Mobile_No">Mobile No.</string>
    <string name="Email">Email</string>
    <string name="Create">Create</string>
    <string name="forgot">Forgot</string>
    <string name="sms_otp_verification">SMS OTP Verification number</string>
    <string name="otp_number">OTP Number</string>
    <string name="New_Account">New Account</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="apply">Apply</string>
    <string name="agreement_checkbox">"    Agreement T&amp;C(read details)"</string>
    <string name="next">Next</string>
    <string name="transfer_to_your_bank">Transfer to your Bank</string>
    <string name="transfer_to_another_bank">Transfer to another Bank</string>
    <string name="transfer_to_dumi_user">Transfer to another Dumi user</string>
    <string name="dummy_transfer">Dumi Transfer</string>
    <string name="transfer_to_dumi_user_nik">Dumi Transfer (NIK No.)</string>
    <string name="loan_history">Loan History</string>
    <string name="transfer">Transfer</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="apply_loan">Apply Loan</string>
    <string name="installment">Installment</string>
    <string name="signature">Signature</string>
    <string name="amount">Amount</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="name_Account">Name of Account</string>
    <string name="loan_period">Loan Period</string>
    <string name="add_new_payee">Add New Payee</string>
    <string name="note">Note</string>
    <string name="name_of_account">Name of Account</string>
    <string name="account_no">Account No.</string>
    <string name="IFSC_code">IFSC Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_loan_history">LoanHistoryActivity</string>
    <string name="Email_empty">Email is required!</string>
    <string name="net_check">check for data connection</string>

    <string name="successful_request_sent">Contact has been successfully added to your cards \n A request has been sent to connect</string>


</resources>
