<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_bg1"
        android:weightSum="2.5"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/rlTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="20dp"
            >
            <ImageView
                android:layout_marginLeft="15dp"
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_logo_white" />

            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitXY"
                android:layout_alignParentTop="true"
                android:visibility="gone"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_close" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/llMiddle"
            android:layout_below="@+id/rlTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sms_otp_verification"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:textColor="@color/white"
                android:textSize="31sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="30dp"
                android:visibility="invisible"
                android:layout_marginLeft="30dp"
                android:textColor="@color/white"
                android:textSize="30sp"/>
            <EditText
                android:alpha="0.8"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:hint="@string/otp_number"
                android:visibility="visible"
                android:textColorHint="@color/darkBlue"
                android:textColor="@color/darkBlue"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/white_edittext_shadow"/>
            <EditText
                android:alpha="0.8"
                android:inputType="text|textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Mobile_No"
                android:textColorHint="@color/darkBlue"
                android:textColor="@color/darkBlue"
                android:visibility="gone"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/white_edittext_shadow"/>
            <EditText
                android:alpha="0.8"
                android:id="@+id/edtEmail"
                android:inputType="text|textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:visibility="gone"
                android:paddingRight="10dp"
                android:hint="@string/Email"
                android:textColorHint="@color/darkBlue"
                android:textColor="@color/darkBlue"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/white_edittext_shadow"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_below="@+id/llMiddle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:layout_above="@+id/img"
                android:id="@+id/btnSubmit"
                android:padding="10dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/submit"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_shadow"/>
        </RelativeLayout>
    </LinearLayout>
</layout>
