<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/demo_splash"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/rlTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="30dp"
            >
            <ImageView
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:scaleType="fitXY"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_logo" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitXY"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_launcher_background" />
        </RelativeLayout>
        <LinearLayout
            android:layout_below="@+id/rlTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Create"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:textColor="@color/white"
                android:textSize="35sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/New_Account"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:textColor="@color/white"
                android:textSize="35sp"/>
            <EditText
                android:inputType="text|textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:hint="@string/NIK"
                android:textColorHint="@color/darkBlue"
                android:textColor="@color/darkBlue"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/white_edittext_shadow"/>
            <EditText
                android:inputType="text|textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Mobile_No"
                android:textColorHint="@color/darkBlue"
                android:textColor="@color/darkBlue"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/white_edittext_shadow"/>
            <EditText
                android:inputType="text|textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:hint="@string/Email"
                android:textColorHint="@color/darkBlue"
                android:textColor="@color/darkBlue"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/white_edittext_shadow"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">
            <Button
                android:layout_above="@+id/img"
                android:id="@+id/btnLogin"
                android:padding="10dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="Login"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_shadow"/>
        </LinearLayout>
    </RelativeLayout>
</layout>
